samples/_failures_safe/1761632112_e66108_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_915ddd6f.c: In function ‘main’:
./samples/SAFE/__tmp_915ddd6f.c:116:12: error: missing terminating " character
  116 |     printf("\nEnter first matrix
      |            ^~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_915ddd6f.c:116:5: error: expected expression at end of input
  116 |     printf("\nEnter first matrix
      |     ^~~~~~
./samples/SAFE/__tmp_915ddd6f.c:116:5: error: expected declaration or statement at end of input
